# olio-ohjelmointi

./: .gitignore  README.md
H1_1/: CMakeLists.txt
H1_2/: CMakeLists.txt
h1/: main.cpp
homework/h1/: main.cpp
homework/h2/h2_a/: CMakeLists.txt  rectangle.h
homework/h2/h2_b/: CMakeLists.txt  car.cpp  car.h
homework/h2_a/: CMakeLists.txt  README.md  car.cpp  car.h  main.cpp  rectangle.cpp
homework/h2_b/: CMakeLists.txt  README.md  main.cpp
homework/h3/h3_a/: CMakeLists.txt  Chef.cpp  Chef.h  ItalianChef.cpp  ItalianChef.h  README.md  main.cpp
homework/h3/h3_b/: CMakeLists.txt  README.md  animal.cpp  animal.h  dog.cpp  dog.h  main.cpp
homework/h4/untitled/: CMakeLists.txt  READme.md  car.cpp  car.h  engine.cpp  engine.h  main.cpp  wheel.cpp  wheel.h
homework/h5/h5/: CMakeLists.txt  README.md  classa1.cpp  classa1.h  classa2.cpp  classa2.h  classb.h  main.cpp
homework/h6/h6a/: READme.md  h6a.pro  main.cpp  myclass.cpp  myclass.h
homework/h6/h6b/: READme.md  exampleclass.cpp  exampleclass.h  h6b.pro  main.cpp
homework/h7/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lisatehtavat/lisatehtava1/: CMakeLists.txt  car.cpp  car.h  main.cpp
tuntiharj/H1_1/: main.cpp
tuntiharj/H1_2/: main.cpp
tuntiharj/H1_3/: CMakeLists.txt  main.cpp
tuntiharj/H2a_1/: CMakeLists.txt  main.cpp  person.cpp  person.h
tuntiharj/H2a_2/: henkilo.cpp  henkilo.h  main.cpp
tuntiharj/H2a_3/: henkilo.cpp  henkilo.h  main.cpp
